[gd_scene load_steps=10 format=3 uid="uid://ykv65s4mm2ye"]

[ext_resource type="Script" path="res://scripts/basic_minion.gd" id="1_fintc"]
[ext_resource type="Script" path="res://weapons/gun.gd" id="2_n5o7j"]
[ext_resource type="Script" path="res://scripts/basic_bullet_source.gd" id="4_3unn2"]
[ext_resource type="PackedScene" uid="uid://yocua1iyrjpn" path="res://projectile/basic_slow_bullet.tscn" id="4_7ebdc"]
[ext_resource type="Script" path="res://scripts/player_detector.gd" id="7_ajgd1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mm66v"]

[sub_resource type="SphereMesh" id="SphereMesh_30w7d"]

[sub_resource type="BoxMesh" id="BoxMesh_ywnvw"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_c1p5p"]
radius = 8.0

[node name="BasicMinion" type="CharacterBody3D" node_paths=PackedStringArray("_gun")]
script = ExtResource("1_fintc")
_gun = NodePath("CollisionShape3D/Gun")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mm66v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("SphereMesh_30w7d")
skeleton = NodePath("../..")

[node name="Gun" type="Node3D" parent="CollisionShape3D" node_paths=PackedStringArray("_bullet_source")]
script = ExtResource("2_n5o7j")
_bullet_source = NodePath("BulletSource")

[node name="BulletSource" type="Node3D" parent="CollisionShape3D/Gun"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -1.283)
script = ExtResource("4_3unn2")
bullet_scene = ExtResource("4_7ebdc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D/Gun/BulletSource"]
mesh = SubResource("BoxMesh_ywnvw")

[node name="PlayerDetector" type="Area3D" parent="."]
script = ExtResource("7_ajgd1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetector"]
shape = SubResource("SphereShape3D_c1p5p")

[connection signal="body_entered" from="PlayerDetector" to="PlayerDetector" method="_on_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="PlayerDetector" method="_on_body_exited"]
[connection signal="player_entered" from="PlayerDetector" to="." method="_on_player_entered"]
[connection signal="player_exited" from="PlayerDetector" to="." method="_on_player_exited"]
